--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="header">
         <h1>Tic Tac Toe!</h1>
-        <h2>Player 1, make your selection, you will be "X"</h2>
-        <h2>Then, player 2 will go and will be "O"</h2>
+        <h2>Player 1 - Make your selection, you will be "X"</h2>
+        <h2>Player 2 - Go second, you will be "0"</h2>
     </div>
 
     <div class="container">
@@ -30,7 +30,6 @@
         <button id="reset-button" onclick="reset()">RESET</button>
     </div>
 
-    <div id="winner-div"></div>
 
 
     <script>
@@ -51,6 +50,7 @@
         function select(selection) {
             turnCounter = turnCounter + 1;
 
+
             if (turnCounter === 1 || turnCounter === 3 || turnCounter === 5 || turnCounter === 7 || turnCounter === 9){
                 selection.textContent = "X";
                 selection.onclick = null;              
@@ -58,15 +58,29 @@
                 selection.textContent = "O";
                 selection.onclick = null;
             };
+
+            //Change border-color depending on whether it is "X" or "O"
+            if (turnCounter === 1 || turnCounter === 3 || turnCounter === 5 || turnCounter === 7 || turnCounter === 9){
+                selection.setAttribute("class", "square selected-x")
+            } else {
+                selection.setAttribute("class", "square selected-0")
+            };
+
         };
+
 
         // //determine if there is a winner and announce whether it is "x's" or "o's"
         function announceWinner(selection) {
             
             //Check for win by "X"
             if (square1.textContent == "X" && square2.textContent == "X" && square3.textContent == "X") {
-                let winner = document.getElementById("winner-div");
+
+                //create winner announcement at bottom of page.
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
                 winner.textContent = "X wins this one!";             
+                
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -77,8 +91,13 @@
                 square8.onclick = null;
                 square9.onclick = null;
             }  else if (square1.textContent == "X" && square4.textContent == "X" && square7.textContent == "X") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "X wins this one!";             
+
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "X wins this one!";
+
                 square1.onclick = null;
                 square4.onclick = null;
                 square2.onclick = null;
@@ -89,8 +108,13 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square1.textContent == "X" && square5.textContent == "X" && square9.textContent == "X") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "X wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "X wins this one!";   
+  
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -101,8 +125,13 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square2.textContent == "X" && square5.textContent == "X" && square8.textContent == "X") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "X wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "X wins this one!";   
+   
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -113,8 +142,12 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square3.textContent == "X" && square6.textContent == "X" && square9.textContent == "X") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "X wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "X wins this one!";   
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -125,8 +158,12 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square3.textContent == "X" && square5.textContent == "X" && square7.textContent == "X") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "X wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "X wins this one!";   
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -137,8 +174,12 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square4.textContent == "X" && square5.textContent == "X" && square6.textContent == "X") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "X wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "X wins this one!";   
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -149,8 +190,12 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square7.textContent == "X" && square8.textContent == "X" && square9.textContent == "X") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "X wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "X wins this one!";  
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -165,8 +210,12 @@
 
             //Check for win by "O"
             if (square1.textContent == "O" && square2.textContent == "O" && square3.textContent == "O") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "O wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "O wins this one!";   
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -177,8 +226,12 @@
                 square8.onclick = null;
                 square9.onclick = null;
             }  else if (square1.textContent == "O" && square4.textContent == "O" && square7.textContent == "O") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "O wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "O wins this one!"; 
+
                 square1.onclick = null;
                 square4.onclick = null;
                 square2.onclick = null;
@@ -189,8 +242,12 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square1.textContent == "O" && square5.textContent == "O" && square9.textContent == "O") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "O wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "O wins this one!";  
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -201,8 +258,12 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square2.textContent == "O" && square5.textContent == "O" && square8.textContent == "O") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "O wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "O wins this one!";  
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -213,8 +274,12 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square3.textContent == "O" && square6.textContent == "O" && square9.textContent == "O") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "O wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "O wins this one!";  
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -225,8 +290,12 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square3.textContent == "O" && square5.textContent == "O" && square7.textContent == "O") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "O wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "O wins this one!"; 
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -237,8 +306,12 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square4.textContent == "O" && square5.textContent == "O" && square6.textContent == "O") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "O wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "O wins this one!";     
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -249,8 +322,12 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (square7.textContent == "O" && square8.textContent == "O" && square9.textContent == "O") {
-                let winner = document.getElementById("winner-div");
-                winner.textContent = "O wins this one!";             
+
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
+                winner.textContent = "O wins this one!";      
+
                 square1.onclick = null;
                 square2.onclick = null;
                 square3.onclick = null
@@ -261,7 +338,9 @@
                 square8.onclick = null;
                 square9.onclick = null;
             } else if (turnCounter === 9) {
-                let winner = document.getElementById("winner-div");
+                let winner = document.createElement("div");
+                document.body.appendChild(winner);
+                winner.setAttribute("id", "winner-div")
                 winner.textContent = "It's a tie!";  
             }
         };
@@ -282,8 +361,9 @@
             square9.textContent = "";
 
             //Remove the winner announcement
+
+            //not sure why this variable is necessary since it is already part of the dom?
             let winner = document.getElementById("winner-div");
-            winner.textContent = "";   
 
             square1.setAttribute("onclick", "select(square1); announceWinner()");
             square2.setAttribute("onclick", "select(square2); announceWinner()");
@@ -294,6 +374,19 @@
             square7.setAttribute("onclick", "select(square7); announceWinner()");
             square8.setAttribute("onclick", "select(square8); announceWinner()");
             square9.setAttribute("onclick", "select(square9); announceWinner()");
+
+            square1.setAttribute("class", "square")
+            square2.setAttribute("class", "square");
+            square3.setAttribute("class", "square");
+            square4.setAttribute("class", "square");
+            square5.setAttribute("class", "square");
+            square6.setAttribute("class", "square");
+            square7.setAttribute("class", "square");
+            square8.setAttribute("class", "square");
+            square9.setAttribute("class", "square");
+
+            //remove the div containing the winner announcement
+            document.body.removeChild(winner);
         }
 
     </script>
