--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header">
         <h1>Tic Tac Toe!</h1>
         <h2>Player 1 - Make your selection, you will be "X"</h2>
-        <h2>Player 2 - Go second, you will be "0"</h2>
+        <h2>Player 2 - Go second, you will be "O"</h2>
     </div>
 
     <div class="container">
